[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-rl"
version = "0.1.0"
description = "A simple Q-learning agent for routing in a mesh network"
authors = [
  { name="User", email="user@example.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/example/mesh-rl"

[tool.setuptools.packages.find]
where = ["src"]
